14-istio/demo-1/1-productms-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: productms-svc
  namespace: microserviceworkshop
  labels:
    app: productms-svc
spec:
  selector:
    app: productms
  ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
     name: http
