14-istio/demo-1/2-productreviewms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: productreviewms-svc
  namespace: microserviceworkshop
  labels:
    app: productreviewms-svc
spec:
  selector:
    app: productreviewms
  ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
     name: http
