14-istio/demo-1/1-productms-vr-svc.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microserviceworkshop-productservice-vs
  namespace: microserviceworkshop   
spec:
  hosts:
  - "*"
  gateways:
  - microserviceworkshop-gateway
  http:
  - match:
    - uri:
        prefix: /productms
    route:
    - destination:
        host: productms-svc.microserviceworkshop.svc.cluster.local
        port:
          number: 80
