14-istio/demo-1/2-productreeviewms-vr-svc.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-productreviewms-vs
  namespace: microserviceworkshop   
spec:
  hosts:
  - "*"
  gateways:
  - microserviceworkshop-gateway
  http:
  - match:
    - uri:
        prefix: /productreviewms
    route:
    - destination:
        host: productreviewms-svc.microserviceworkshop.svc.cluster.local
        port:
          number: 80
